--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bookmark">Bookmark</string>
     <string name="detail_news">Detail News</string>
+    <string name="new_author">Danang Ardian</string>
+    <string name="april_12_2021">April 12, 2021</string>
+    <string name="bookmark_news">Bookmark News</string>
+    <string name="delete">Delete</string>
+    <string name="delete_all">Delete All</string>
 </resources>
